# fiNESse

./: .gitignore  CMakeLists.txt  README.md
src/: cartridge.c  cpu.c  display.c  main.c  memory.c  ppu.c
src/include/: cartridge.h  cpu.h  display.h  memory.h  ppu.h
